--- a/checkout/common.css
+++ b/checkout/common.css
@@ -570,14 +570,14 @@
      margin: 0;
  }
 
- .remove {
+ /* .remove {
      font-size: 12px;
      color: red;
      position: relative;
      left: 70px;
      top: -25px;
      cursor: pointer;
- }
+ } */
 
  /* =============Cart End============ */
 
